Change button text for matrix calculation

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
    <div class="step" id="result" style="display:none;">
      <div class="subtitle">Standard Matrix Result</div>
      <div id="matrixOutput"></div>
-     <button onclick="ResetMatrix()">Create New Calculator</button>
+     <button onclick="ResetMatrix()">Calculate New Matrix</button>
    </div>
  </div>
 
