--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
    <div class="step" id="step1">
      <div class="subtitle">Step 1: Enter Dimensions</div>
-     <p>Maximum of 5 dimensions only (n, m â‰¤ 5).</p>
+     <p>Maximum of 5 dimensions only (n, m ≤ 5).</p>
      <div class="row">
        <span class="label">Domain dimension (n):</span>
        <input type="number" name="n" id="domain" placeholder="1 - 5" min="1" max="5">
@@ -28,10 +28,10 @@
    </div>
 
    <div class="step" id="step2" style="display:none;">
-     <div class="subtitle">Step 2a: Enter basis vectors (bâ‚,bâ‚‚,...,bâ‚™)</div>
+     <div class="subtitle">Step 2a: Enter basis vectors (b₁,b₂,...,bₙ)</div>
      <div id="basisInputs"></div>
 
-     <div class="subtitle">Step 2b: Enter images (T(bâ‚),..., T(bâ‚™))</div>
+     <div class="subtitle">Step 2b: Enter images (T(b₁),..., T(bₙ))</div>
      <div id="imageInputs"></div>
 
      <button onclick="generateMatrix()">Generate Standard Matrix</button>
