Rename button text from 'Generate' to 'Calculate'

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
      <div class="subtitle">Step 2b: Enter images (T(b₁),..., T(bₙ))</div>
      <div id="imageInputs"></div>
 
-     <button onclick="generateMatrix()">Generate Standard Matrix</button>
+     <button onclick="generateMatrix()">Calculate Standard Matrix</button>
      <button onclick="ResetInputBasis()">Reset Input</button>
    </div>
 
