--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ function setDimensions() {
     document.getElementById('step2').style.display = 'block';
     buildInputs();
   } else {
-    alert('Please enter valid dimensions (1â€“5).');
+    alert('Please enter valid dimensions (1–5).');
   }
 }
 
@@ -115,6 +115,7 @@ function ResetInputBasis() {
       }
     }
   }
+  document.getElementById('result').style.display = 'none';
 }
 
 function generateMatrix() {
