Update reset buttons

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
        <input type="number" name="n" id="domain" placeholder="1 - 5" min="1" max="5">
      </div>
      <div class="row">
-       <span class="label">Codomain dimension (m):</span>
+       <span class="label">Co-domain dimension (m):</span>
        <input type="number" name="m" id="codomain" min="1" max="5" placeholder="1 - 5">
      </div>
      <button onclick="setDimensions()">Set Dimensions</button>
